# PathTracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
src/: main.cpp
src/PathTracer/: Box.h  Camera.cpp  Camera.h  HitInfo.h  Image.cpp  Image.h  PathTracer.cpp  PathTracer.h  Quad.cpp  Quad.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Surface.h  Transform.h  Triangle.cpp  Triangle.h  config.h  test.h  util.cpp  util.h
src/PathTracer/Materials/: Dielectric.cpp  Dielectric.h  Diffuse.cpp  Diffuse.h  Material.h  Metal.cpp  Metal.h
